--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="https://drive.google.com/thumbnail?authuser=0&sz=w1500-h1000-p&id=' + resp.items[key].id + '" alt="' + resp.items[key].title + '">' +
+								'				<img src="https://drive.google.com/thumbnail?authuser=0&sz=w1500-h1000-p&id=' + resp.files[key].id + '" alt="' + resp.files[key].title + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
