--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 								'			<a href="https://drive.google.com/open?id=' + resp.files[key].id + '" target="_blank">' +
 								'				<div class="hover-effect">' +
 								'					<div class="hover-content">' +
-								'						<h2>' + resp.files[key].title + '</h2>' +
+								'						<h2>' + resp.files[key].name + '</h2>' +
 								'					</div>' +
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="https://drive.google.com/thumbnail?authuser=0&sz=w1500-h1000-p&id=' + resp.files[key].id + '" alt="' + resp.files[key].title + '">' +
+								'				<img src="https://drive.google.com/thumbnail?authuser=0&sz=w1500-h1000-p&id=' + resp.files[key].id + '" alt="' + resp.files[key].name + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
