--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-image">
-													<img src="img/關於我們_關於我們.png" alt="關於我們_關於我們">
+													<img src="img/關於我們_關於我們.jpg" alt="關於我們_關於我們">
 												</div>
 											</div>
 										</div>
