壓縮一些圖片

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
 		<meta property="og:url" content="https://nkustacappella.github.io/" />
-		<meta property="og:image" content="https://nkustacappella.github.io/img/og_img.png"/>
+		<meta property="og:image" content="https://nkustacappella.github.io/img/og_img.jpg"/>
 		<meta property="og:site_name" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -235,7 +235,7 @@
 					<div class="container-fluid">
 						<div class="col-md-3">
 							<div class="author-image">
-								<img src="img/首頁_ICON.png" alt="首頁_ICON">
+								<img src="img/首頁_ICON.jpg" alt="首頁_ICON">
 							</div>
 						</div>
 						<div class="col-md-9">
