--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 									'				</div>' +
 									'			</a>' +
 									'			<div class="image">' +
-									'				<img src="' + resp.items[key].snippet.thumbnails.default.url + '" alt="' + resp.items[key].snippet.title + '">' +
+									'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
 									'			</div>' +
 									'		</div>' +
 									'	</div>' +
@@ -169,7 +169,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="' + resp.items[key].snippet.thumbnails.default.url + '" alt="' + resp.items[key].snippet.title + '">' +
+								'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
