--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 		<!-- //FaceBook 洽談外掛程式 -->
 		<!-- Load Facebook SDK for JavaScript -->
 		<div id="fb-root"></div>
-		<script async>
+		<script defer>
 			window.fbAsyncInit = function() {
 			FB.init({
 				xfbml            : true,
