Revert "link async"
This reverts commit 97cdb103d6443667c0838592399b4d640b4c7bd3.

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 		<meta property="og:image" content="https://nkustacappella.github.io/img/og_img.jpg"/>
 		<meta property="og:site_name" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
-		<link async rel="stylesheet" href="css/bootstrap.min.css">
-		<link async rel="stylesheet" href="css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		
 		
-		<link async rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
-		<link async rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/v4-shims.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/v4-shims.css">
 		
-		<link async rel="stylesheet" href="css/light-box.css">
+		<link rel="stylesheet" href="css/light-box.css">
 		<link rel="stylesheet" href="css/templatemo-main.css">
-		<link async href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 		<script async src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 		
 		<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 		
 		<!-- GRT Youtube Plugin CSS -->
-		<link async rel="stylesheet" href="./css/grt-youtube-popup.css">
+		<link rel="stylesheet" href="./css/grt-youtube-popup.css">
 		
 		<script async src="https://apis.google.com/js/api.js"></script>
 		<script async>
