--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 		
 		<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 		
+		
+		<script src="https://raw.githubusercontent.com/aFarkas/lazysizes/gh-pages/lazysizes.min.js"></script>
+		
 		<!-- GRT Youtube Plugin CSS -->
 		<link rel="stylesheet" href="./css/grt-youtube-popup.css">
 		
@@ -57,7 +60,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="https://drive.google.com/thumbnail?authuser=0&sz=w160-h90-p&id=' + resp.files[key].id + '" alt="' + resp.files[key].name + '">' +
+								'				<img class="lazyload" data-src="https://drive.google.com/thumbnail?authuser=0&sz=w160-h90-p&id=' + resp.files[key].id + '" alt="' + resp.files[key].name + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
@@ -130,7 +133,7 @@
 									'				</div>' +
 									'			</a>' +
 									'			<div class="image">' +
-									'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
+									'				<img class="lazyload" data-src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
 									'			</div>' +
 									'		</div>' +
 									'	</div>' +
@@ -169,7 +172,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
+								'				<img class="lazyload" data-src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
@@ -215,10 +218,10 @@
 		</div>
 		<nav>
 			<div class="logo">
-				<img src="img/logo.png" alt="logo">
+				<img class="lazyload" data-src="img/logo.png" alt="logo">
 			</div>
 			<div class="mini-logo">
-				<img src="img/mini_logo.png" alt="mini_logo">
+				<img class="lazyload" data-src="img/mini_logo.png" alt="mini_logo">
 			</div>
 			<ul>
 				<li><a href="#1"><i class="fa fa-home"></i> <em>首　　頁</em></a></li>
@@ -235,7 +238,7 @@
 					<div class="container-fluid">
 						<div class="col-md-3">
 							<div class="author-image">
-								<img src="img/首頁_ICON.jpg" alt="首頁_ICON">
+								<img class="lazyload" data-src="img/首頁_ICON.jpg" alt="首頁_ICON">
 							</div>
 						</div>
 						<div class="col-md-9">
@@ -274,7 +277,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-image">
-													<img src="img/關於我們_關於我們.jpg" alt="關於我們_關於我們">
+													<img class="lazyload" data-src="img/關於我們_關於我們.jpg" alt="關於我們_關於我們">
 												</div>
 											</div>
 										</div>
@@ -285,7 +288,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="left-image">
-													<img src="img/關於我們_什麼是ACappella.jpg" alt="關於我們_什麼是ACappella">
+													<img class="lazyload" data-src="img/關於我們_什麼是ACappella.jpg" alt="關於我們_什麼是ACappella">
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -312,7 +315,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="left-image">
-													<img src="img/關於我們_創社經歷.jpg" alt="關於我們_創社經歷">
+													<img class="lazyload" data-src="img/關於我們_創社經歷.jpg" alt="關於我們_創社經歷">
 												</div>
 											</div>
 										</div>
@@ -339,7 +342,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-image">
-													<img src="img/理念宗旨_Share the Joy.jpg" alt="理念宗旨_Share the Joy">
+													<img class="lazyload" data-src="img/理念宗旨_Share the Joy.jpg" alt="理念宗旨_Share the Joy">
 												</div>
 											</div>
 										</div>
@@ -350,7 +353,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="left-image">
-													<img src="img/理念宗旨_Find a Friend.jpg" alt="理念宗旨_Find a Friend">
+													<img class="lazyload" data-src="img/理念宗旨_Find a Friend.jpg" alt="理念宗旨_Find a Friend">
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -387,7 +390,7 @@
 											</div>
 										</a>
 										<div class='image'>
-											<img src=https://lh6.googleusercontent.com/r5xqdUQKBi360eMWUc85k_Q1UQVwDmocB6KJ_p0aXueoAAcYdt9AJNxdxdoypwo=w1200-h630-p>
+											<img class="lazyload" data-src=https://lh6.googleusercontent.com/r5xqdUQKBi360eMWUc85k_Q1UQVwDmocB6KJ_p0aXueoAAcYdt9AJNxdxdoypwo=w1200-h630-p>
 										</div>
 									</div>
 								</div>
@@ -419,7 +422,7 @@
 											</div>
 										</a>
 										<div class='image'>
-											<img src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
+											<img class="lazyload" data-src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
 										</div>
 									</div>
 								</div>
@@ -446,7 +449,7 @@
 											</div>
 										</a>
 										<div class='image'>
-											<img src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
+											<img class="lazyload" data-src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
 										</div>
 									</div>
 								</div>
