--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
 		
 		<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 		
-		
-		<script src="https://raw.githubusercontent.com/aFarkas/lazysizes/gh-pages/lazysizes.min.js"></script>
-		
 		<!-- GRT Youtube Plugin CSS -->
 		<link rel="stylesheet" href="./css/grt-youtube-popup.css">
 		
@@ -60,7 +57,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img class="lazyload" data-src="https://drive.google.com/thumbnail?authuser=0&sz=w160-h90-p&id=' + resp.files[key].id + '" alt="' + resp.files[key].name + '">' +
+								'				<img src="https://drive.google.com/thumbnail?authuser=0&sz=w160-h90-p&id=' + resp.files[key].id + '" alt="' + resp.files[key].name + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
@@ -133,7 +130,7 @@
 									'				</div>' +
 									'			</a>' +
 									'			<div class="image">' +
-									'				<img class="lazyload" data-src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
+									'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
 									'			</div>' +
 									'		</div>' +
 									'	</div>' +
@@ -172,7 +169,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img class="lazyload" data-src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
+								'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
@@ -218,10 +215,10 @@
 		</div>
 		<nav>
 			<div class="logo">
-				<img class="lazyload" data-src="img/logo.png" alt="logo">
+				<img src="img/logo.png" alt="logo">
 			</div>
 			<div class="mini-logo">
-				<img class="lazyload" data-src="img/mini_logo.png" alt="mini_logo">
+				<img src="img/mini_logo.png" alt="mini_logo">
 			</div>
 			<ul>
 				<li><a href="#1"><i class="fa fa-home"></i> <em>首　　頁</em></a></li>
@@ -238,7 +235,7 @@
 					<div class="container-fluid">
 						<div class="col-md-3">
 							<div class="author-image">
-								<img class="lazyload" data-src="img/首頁_ICON.jpg" alt="首頁_ICON">
+								<img src="img/首頁_ICON.jpg" alt="首頁_ICON">
 							</div>
 						</div>
 						<div class="col-md-9">
@@ -277,7 +274,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-image">
-													<img class="lazyload" data-src="img/關於我們_關於我們.jpg" alt="關於我們_關於我們">
+													<img src="img/關於我們_關於我們.jpg" alt="關於我們_關於我們">
 												</div>
 											</div>
 										</div>
@@ -288,7 +285,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="left-image">
-													<img class="lazyload" data-src="img/關於我們_什麼是ACappella.jpg" alt="關於我們_什麼是ACappella">
+													<img src="img/關於我們_什麼是ACappella.jpg" alt="關於我們_什麼是ACappella">
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -315,7 +312,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="left-image">
-													<img class="lazyload" data-src="img/關於我們_創社經歷.jpg" alt="關於我們_創社經歷">
+													<img src="img/關於我們_創社經歷.jpg" alt="關於我們_創社經歷">
 												</div>
 											</div>
 										</div>
@@ -342,7 +339,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-image">
-													<img class="lazyload" data-src="img/理念宗旨_Share the Joy.jpg" alt="理念宗旨_Share the Joy">
+													<img src="img/理念宗旨_Share the Joy.jpg" alt="理念宗旨_Share the Joy">
 												</div>
 											</div>
 										</div>
@@ -353,7 +350,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="left-image">
-													<img class="lazyload" data-src="img/理念宗旨_Find a Friend.jpg" alt="理念宗旨_Find a Friend">
+													<img src="img/理念宗旨_Find a Friend.jpg" alt="理念宗旨_Find a Friend">
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -390,7 +387,7 @@
 											</div>
 										</a>
 										<div class='image'>
-											<img class="lazyload" data-src=https://lh6.googleusercontent.com/r5xqdUQKBi360eMWUc85k_Q1UQVwDmocB6KJ_p0aXueoAAcYdt9AJNxdxdoypwo=w1200-h630-p>
+											<img src=https://lh6.googleusercontent.com/r5xqdUQKBi360eMWUc85k_Q1UQVwDmocB6KJ_p0aXueoAAcYdt9AJNxdxdoypwo=w1200-h630-p>
 										</div>
 									</div>
 								</div>
@@ -422,7 +419,7 @@
 											</div>
 										</a>
 										<div class='image'>
-											<img class="lazyload" data-src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
+											<img src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
 										</div>
 									</div>
 								</div>
@@ -449,7 +446,7 @@
 											</div>
 										</a>
 										<div class='image'>
-											<img class="lazyload" data-src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
+											<img src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
 										</div>
 									</div>
 								</div>
