--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="https://drive.google.com/thumbnail?authuser=0&sz=w160-h90-p&id=' + resp.files[key].id + '" alt="' + resp.files[key].name + '">' +
+								'				<img loading="lazy" src="https://drive.google.com/thumbnail?authuser=0&sz=w160-h90-p&id=' + resp.files[key].id + '" alt="' + resp.files[key].name + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
@@ -130,7 +130,7 @@
 									'				</div>' +
 									'			</a>' +
 									'			<div class="image">' +
-									'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
+									'				<img loading="lazy" src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
 									'			</div>' +
 									'		</div>' +
 									'	</div>' +
@@ -169,7 +169,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
+								'				<img loading="lazy" src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
@@ -215,10 +215,10 @@
 		</div>
 		<nav>
 			<div class="logo">
-				<img src="img/logo.png" alt="logo">
+				<img loading="lazy" src="img/logo.png" alt="logo">
 			</div>
 			<div class="mini-logo">
-				<img src="img/mini_logo.png" alt="mini_logo">
+				<img loading="lazy" src="img/mini_logo.png" alt="mini_logo">
 			</div>
 			<ul>
 				<li><a href="#1"><i class="fa fa-home"></i> <em>首　　頁</em></a></li>
@@ -235,7 +235,7 @@
 					<div class="container-fluid">
 						<div class="col-md-3">
 							<div class="author-image">
-								<img src="img/首頁_ICON.jpg" alt="首頁_ICON">
+								<img loading="lazy" src="img/首頁_ICON.jpg" alt="首頁_ICON">
 							</div>
 						</div>
 						<div class="col-md-9">
@@ -274,7 +274,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-image">
-													<img src="img/關於我們_關於我們.jpg" alt="關於我們_關於我們">
+													<img loading="lazy" src="img/關於我們_關於我們.jpg" alt="關於我們_關於我們">
 												</div>
 											</div>
 										</div>
@@ -285,7 +285,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="left-image">
-													<img src="img/關於我們_什麼是ACappella.jpg" alt="關於我們_什麼是ACappella">
+													<img loading="lazy" src="img/關於我們_什麼是ACappella.jpg" alt="關於我們_什麼是ACappella">
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -312,7 +312,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="left-image">
-													<img src="img/關於我們_創社經歷.jpg" alt="關於我們_創社經歷">
+													<img loading="lazy" src="img/關於我們_創社經歷.jpg" alt="關於我們_創社經歷">
 												</div>
 											</div>
 										</div>
@@ -339,7 +339,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-image">
-													<img src="img/理念宗旨_Share the Joy.jpg" alt="理念宗旨_Share the Joy">
+													<img loading="lazy" src="img/理念宗旨_Share the Joy.jpg" alt="理念宗旨_Share the Joy">
 												</div>
 											</div>
 										</div>
@@ -350,7 +350,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="left-image">
-													<img src="img/理念宗旨_Find a Friend.jpg" alt="理念宗旨_Find a Friend">
+													<img loading="lazy" src="img/理念宗旨_Find a Friend.jpg" alt="理念宗旨_Find a Friend">
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -387,7 +387,7 @@
 											</div>
 										</a>
 										<div class='image'>
-											<img src=https://lh6.googleusercontent.com/r5xqdUQKBi360eMWUc85k_Q1UQVwDmocB6KJ_p0aXueoAAcYdt9AJNxdxdoypwo=w1200-h630-p>
+											<img loading="lazy" src=https://lh6.googleusercontent.com/r5xqdUQKBi360eMWUc85k_Q1UQVwDmocB6KJ_p0aXueoAAcYdt9AJNxdxdoypwo=w1200-h630-p>
 										</div>
 									</div>
 								</div>
@@ -419,7 +419,7 @@
 											</div>
 										</a>
 										<div class='image'>
-											<img src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
+											<img loading="lazy" src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
 										</div>
 									</div>
 								</div>
@@ -446,7 +446,7 @@
 											</div>
 										</a>
 										<div class='image'>
-											<img src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
+											<img loading="lazy" src='https://img.youtube.com/vi/8nf367667vs/maxresdefault.jpg'>
 										</div>
 									</div>
 								</div>
