iframe loading="lazy"

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										'<div class="grtyoutube-popup grtyoutube-dark-theme">'+
 											'<div class="grtyoutube-popup-content">'+
 												'<span class="grtyoutube-popup-close"></span>'+
-												'<iframe class="grtyoutube-iframe" src="https://www.youtube.com/embed/' + resp.items[key].contentDetails.videoId + '?rel=0&wmode=transparent&autoplay=1&iv_load_policy=3" allowfullscreen frameborder="0" allow="autoplay; fullscreen"></iframe>'+
+												'<iframe loading="lazy" class="grtyoutube-iframe" src="https://www.youtube.com/embed/' + resp.items[key].contentDetails.videoId + '?rel=0&wmode=transparent&autoplay=1&iv_load_policy=3" allowfullscreen frameborder="0" allow="autoplay; fullscreen"></iframe>'+
 											'</div>'+
 										'</div>'
 									);
@@ -462,7 +462,7 @@
 					<div class="container-fluid">
 						<div class="col-md-6">
 							<div id="map">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d919.8216691850502!2d120.33515882919542!3d22.754739999068086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjLCsDQ1JzE3LjEiTiAxMjDCsDIwJzA4LjUiRQ!5e0!3m2!1szh-TW!2sth!4v1566578931355!5m2!1szh-TW!2sth"
+								<iframe loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d919.8216691850502!2d120.33515882919542!3d22.754739999068086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjLCsDQ1JzE3LjEiTiAxMjDCsDIwJzA4LjUiRQ!5e0!3m2!1szh-TW!2sth!4v1566578931355!5m2!1szh-TW!2sth"
 								width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen>
 								</iframe>
 							</div>
