--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 					<div class="container-fluid">
 					
 						<div class="row" id="videoInfo">
-							<h2 style="color:white; font-weight:bold; text-align:center; text-decoration:underline;">推薦影片</h2>
+							<h2 style="color:white; font-weight:bold; text-align:center; text-decoration:underline;">推薦影片(熱門)</h2>
 							<!-- // CODE格式
 							<div class='col-md-4 col-sm-6'>
 								<div class='item'>
