--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 							if(resp.items[key].snippet.title !== 'Private video') { //非私人影片才會顯示，要不然會噴錯
 								<!-- //YouTube推薦影片彈窗 -->
 								//if(resp.items[key].snippet.position == 0) {
-								var arr = document.cookie.match(new RegExp("(^| )"   checkYouTubePoPCookie   "=([^;]*)(;|$)"));
+								var arr = document.cookie.match(new RegExp('(^| ) checkYouTubePoPCookie =([^;]*)(;|$)'));
 								if( (arr == null) || (arrarr[2] == false) ) {
 									var Days = 30;//此 cookie 將被儲存 30 天
 									var exp = new Date();//new Date("December 31, 9998");
 									exp.setTime(exp.getTime()   Days*24*60*60*1000);
-									document.cookie = checkYouTubePoPCookie   "="  escape (true)   ";expires="   exp.toGMTString();
+									document.cookie = 'checkYouTubePoPCookie = true ;expires=' exp.toGMTString();
 									if(checkYouTubePoP == false) {
 										$("body").append(
 											'<div class="grtyoutube-popup grtyoutube-dark-theme">'+
