--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								
 								if( (getCheckYouTubePoPCookie == null) || (getCheckYouTubePoPCookie == false) ) {
 								
-									var days = 30;//此 cookie 將被儲存 30 天
+									var days = (1 / 24) / 60 / 60 *30;//此 cookie 將被儲存天數字
 									var date = new Date();
 									date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
 									document.cookie = 'checkYouTubePoPCookie=true; expires=' + date.toGMTString() + '; path=/';
