--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>國立高雄科技大學 A CAPPELLA 阿卡貝拉社 社團官網</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
+		<meta name="description" content="國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是由一群樂愛唱歌的大學生組成。">
 		<meta name="keywords" content="nkust, nkfust, 國立高雄科技大學, 國立高雄第一科技大學, 高科大, 高第一, acappella, 阿卡貝拉, group, club, 社團, first campus, 第一校區"/>
 		<meta content='https://www.facebook.com/nkustAcappella/' property='article:author'/>
 		<meta property="og:title" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
 		<meta property="og:type" content="website" />
-		<meta property="og:description" content="國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
+		<meta property="og:description" content="國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是由一群樂愛唱歌的大學生組成。">
 		<meta property="og:url" content="https://nkustacappella.github.io/" />
 		<meta property="og:image" content="https://nkustacappella.github.io/img/og_img.jpg"/>
 		<meta property="og:site_name" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
@@ -270,7 +270,7 @@
 									國立高雄科技大學第一校區A CAPPELLA社成立於2015年
 								</em>
 							</p>
-							<p><em>我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。</em></p>
+							<p><em>我們社團是由一群樂愛唱歌的大學生組成。</em></p>
 							<div class="fb-btn"><a href="https://www.youtube.com/nkustacappella?sub_confirmation=1" target="_blank"><i class="fa fa-youtube"></i> YouTube 頻道</a></div>
 							<div class="fb-btn"><a href="https://fb.me/nkustAcappella" target="_blank"><i class="fa fa-facebook"></i> FaceBook</a></div>
 							<div class="fb-btn"><a href="https://www.instagram.com/nkustacappella/" target="_blank"><i class="fa fa-instagram"></i> Instagram</a></div>
