--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 					<script type="text/javascript">
 						document.getElementById('footerCopyright').innerHTML = "Copyright &copy; 2015-" + new Date().getFullYear();
 					</script>
-					<a href="https://fb.me/nkustAcappella" target="_blank"> NKUST A CAPPELLA 社 </a> | Powered by <a href="mailto:c107118223@nkust.edu.tw"> Chen, Hsin-Wei </a> | Designed by TemplateMo(Moonlight) | <a href="https://github.com/nkustacappella/nkustacappella.github.io" target="_blank"> GitHub </a>
+					<a href="https://fb.me/nkustAcappella" target="_blank"> NKUST A CAPPELLA </a> | Powered by <a href="mailto:c107118223@nkust.edu.tw"> Chen, Hsin-Wei </a> | Designed by TemplateMo(Moonlight) | <a href="https://github.com/nkustacappella/nkustacappella.github.io" target="_blank"> GitHub </a>
 				</p>
 			</div>
 			<!-- 
