--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
 							<div class="fb-btn"><a href="https://www.youtube.com/nkustacappella?sub_confirmation=1" target="_blank"><i class="fa fa-youtube"></i> YouTube 頻道</a></div>
 							<div class="fb-btn"><a href="https://fb.me/nkustAcappella" target="_blank"><i class="fa fa-facebook"></i> FaceBook</a></div>
 							<div class="fb-btn"><a href="https://www.instagram.com/nkustacappella/" target="_blank"><i class="fa fa-instagram"></i> Instagram</a></div>
+							<div class="fb-btn"><a href="https://open.lbry.com/@nkustacappella:9?r=Apx7WxCu9qNh6QREuabEanHvFGoT5HSV" target="_blank"><i class="fa fa-vudeo"></i> LBRY.TV 頻道</a></div>
 						</div>
 					</div>
 				</div>
