Revert "add test Text"
This reverts commit 4af5fda07c4be7f51bf6fc84203f0425cb6e9d91.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>國立高雄科技大學 A CAPPELLA 阿卡貝拉社 社團官網(測試文字)</title>
+		<title>國立高雄科技大學 A CAPPELLA 阿卡貝拉社 社團官網</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是由一群樂愛唱歌的大學生組成。">
 		<meta name="keywords" content="nkust, nkfust, 國立高雄科技大學, 國立高雄第一科技大學, 高科大, 高第一, acappella, 阿卡貝拉, group, club, 社團, first campus, 第一校區"/>
